[gd_scene load_steps=3 format=3 uid="uid://cnlk0wmwqee1w"]

[ext_resource type="Script" uid="uid://bmgt0cijpwd7" path="res://Scenes/Menus/test_main_menu.gd" id="1_0od6y"]
[ext_resource type="PackedScene" uid="uid://cfd1x4inrow4y" path="res://Scenes/pin_joint_2d.tscn" id="1_hsh5n"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_0od6y")

[node name="OptionsBtn" parent="." instance=ExtResource("1_hsh5n")]
position = Vector2(384, -1296)
btn_title = "OPTIONS"
drop_length = 1000.0
duration_drop = 7.0

[node name="StartBtn" parent="." instance=ExtResource("1_hsh5n")]
position = Vector2(808, -1056)
drop_length = 1000.0

[node name="StartBtn2" parent="." instance=ExtResource("1_hsh5n")]
position = Vector2(1688, -1056)
btn_title = "LORUM IPSUM"
drop_length = 1000.0

[node name="ExitBtn" parent="." instance=ExtResource("1_hsh5n")]
position = Vector2(1232, -1304)
btn_title = "EXIT"
drop_length = 1000.0
duration_drop = 7.0

[connection signal="pressed" from="OptionsBtn" to="." method="_on_options_btn_pressed"]
[connection signal="pressed" from="StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="StartBtn2" to="." method="_on_start_btn_2_pressed"]
[connection signal="pressed" from="ExitBtn" to="." method="_on_exit_btn_pressed"]
